[fix] location.hash

--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script type="text/javascript">
+    if (window.location.hash && window.location.hash == '#/_=_') {
+        window.location.hash = '';
+    }
+  </script>
 </html>
